--- a/static/thankyou.html
+++ b/static/thankyou.html
@@ -1,11 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Thank You</title>
-</head>
-<body>
-  
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Thank You</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@100..900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="/static/css/overall.css" />
+    <link rel="stylesheet" href="/static/css/thankyou.css" />
+    <script defer type="module" src="/static/app/user.js"></script>
+    <script defer type="module" src="/static/app/thankyou.js"></script>
+  </head>
+  <body>
+    <header class="header">
+      <nav class="header__nav">
+        <h2 class="header__title">台北一日遊</h2>
+        <div class="header__page">
+          <button class="header__btn header__btn--booking">預定行程</button>
+          <button class="header__btn header__btn--user">登入/註冊</button>
+        </div>
+      </nav>
+    </header>
+    <main>
+      <section class="order">
+        <h3 class="order__result bold">預定行程成功！</h3>
+        <div class="order__error">付款失敗，請重新嘗試</div>
+        <div class="order__note body-bold">這是您的訂單編號</div>
+        <div class="order__number body-med"></div>
+        <h3 class="order__alert">請記住此編號，祝您旅程愉快</h3>
+      </section>
+    </main>
+    <footer>
+      <p class="body-bold">COPYRIGHT © 2021 台北一日遊</p>
+    </footer>
+  </body>
 </html>
